# TagManager

./: .coverage  .gitignore  AUTOMATION_GUIDE.md  AUTOMATION_SUMMARY.md  CONFIG_SYSTEM_SUMMARY.md  INSTALLATION.md  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  WINDOWS_COMPATIBILITY.md  bump_version.py  cleanup.bat  cleanup.sh  config.ini  config.py  coverage.json  install.bat  install.sh  mcp_config_example.json  not_test_config.ini  publish.sh  pyproject.toml  release.sh  release_notes.md  requirements.txt  run_tests.py  setup_pypi.py  test_config.json  tests.py  tm  tm.bat  tm.py
.claude/: settings.local.json
.cursor/: mcp.json
.github/workflows/: release.yml  tests.yml
app/: add.py  helpers.py  list.py  list_all.py  paths.py  storage.py  tags.py
app/add/: handler.py
app/bulk/: handler.py  service.py
app/filter/: handler.py  service.py
app/list_all/: handler.py  service.py
app/paths/: handler.py
app/remove/: handler.py  remove.py  service.py
app/search/: handler.py  service.py
app/stats/: handler.py  service.py
app/storage/: handler.py  service.py
app/tags/: handler.py  service.py  tags.py
app/visualization/: handler.py  service.py
completions/: ftag.fish  tm.fish
docs/: AUTOMATION_GUIDE.md  AUTOMATION_SUMMARY.md  COMPREHENSIVE_TESTS_SUMMARY.md  CONFIGURATION_GUIDE.md  CONFIG_SYSTEM_SUMMARY.md  INSTALLATION.md  PACKAGE_SUMMARY.md  PROJECT_CLEANUP_GUIDE.md  README.md  RELEASE_CI.md  TESTING_GUIDE.md  WINDOWS_COMPATIBILITY.md  index.html  privacy.html  refund.html  release_notes.md  terms.html
filetagger/: __init__.py  cli.py  configReader.py  config_manager.py  licensing.py  mcp_stdio.py  runtime.py  win_context_menu.py
filetagger/app/: _gui.py  gui_handlers.py  helpers.py  http_api.py  preview_page.html  thin_gui.html
filetagger/app/_assets/: __init__.py  _make_icon.py
filetagger/app/add/: handler.py  service.py
filetagger/app/alias/: service.py
filetagger/app/autotag/: content_rule_groups.py  service.py
filetagger/app/bulk/: handler.py  service.py
filetagger/app/config/: gui.py  handler.py  service.py  tui.py
filetagger/app/doctor/: __init__.py  service.py
filetagger/app/exportdata/: service.py
filetagger/app/filter/: handler.py  service.py
filetagger/app/graph/: export.py  handler.py
filetagger/app/hotkey/: handler.py  service.py
filetagger/app/journal/: __init__.py  service.py
filetagger/app/license/: handler.py
filetagger/app/list_all/: handler.py  service.py
filetagger/mcp_server/: server.py
pypi-ftag-reservation/: README.md  ftag.py  pyproject.toml
tagmanager/: __init__.py  cli.py  config.ini  configReader.py  config_manager.py  mcp_stdio.py  runtime.py  win_context_menu.py
tagmanager/app/: gui_handlers.py  helpers.py  http_api.py  preview_page.html  thin_gui.html
tagmanager/mcp_server/: server.py
tagmanager_cli.egg-info/: PKG-INFO  requires.txt
tasks/: batch_tag_documents.ps1  todo_high_roi.md
tasks/archive/: README.md  todo_high_roi_completed_2026-04.md
tasks/recipes/: README.md  github-actions-example.yml  pre-commit-hook.sample  uvx-oneliners.md
tasks/todo_bdd/: README.md  composability_unix_philosophy.feature  dry_run_undo.feature  error_handling_and_logging.feature  mcp_ai_support.feature  mcp_cli_wrapper.feature  plugin_hook_system.feature  plugin_system.feature  removing_all_tags_from_file.feature  searching_files_by_tag_combinations.feature  thin_gui_nonfunctional.feature
tests/: __init__.py  test.txt  test_add_service.py  test_alias_service.py  test_app_handlers_small.py  test_autotag_service.py  test_basic.py  test_bulk_handlers.py  test_bulk_service.py  test_cli_config_json.py  test_cli_export_json.py  test_cli_remove_json.py  test_cli_watch_json.py  test_completion.py  test_config_reader.py  test_config_tui.py  test_doctor_service.py  test_e2e_http_api.py  test_exportdata_service.py  test_filter_service.py  test_graph_service.py  test_gui_handlers.py  test_gui_http.py  test_handlers.py  test_handlers_simple.py  test_helpers.py  test_journal_service.py  test_licensing_e2e.py  test_list_all_service.py  test_mcp_server.py  test_mcp_stdio.py  test_move_service.py  test_path_filters.py  test_post_launch_fixes.py  test_preset_service.py  test_real_functionality.py  test_remove_service.py  test_runtime.py  test_saved_search_service.py  test_search_service.py  (+8 more)
worker/: README.md  keygen.py  package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
(+57 files in other folders)
