[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filetagger-cli"
version = "1.9.4"
description = "The Ultimate Command-Line File Tagging System - Transform chaos into order with intelligent file organization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "David Chincharashvili", email = "david@example.com"}
]
maintainers = [
    {name = "David Chincharashvili", email = "david@example.com"}
]
keywords = [
    "file-management", 
    "tagging", 
    "organization", 
    "cli", 
    "productivity", 
    "file-system",
    "search",
    "metadata"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.7"
dependencies = [
    "typer>=0.9.0",
    "rich>=10.0.0"
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.4.0"
]
watch = [
    "watchdog>=2.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mcp>=1.4.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "watchdog>=2.0.0"
]


[project.urls]
Homepage = "https://github.com/davidtbilisi/FileTagger"
Documentation = "https://github.com/davidtbilisi/FileTagger#readme"
Repository = "https://github.com/davidtbilisi/FileTagger.git"
"Bug Tracker" = "https://github.com/davidtbilisi/FileTagger/issues"
Changelog = "https://github.com/davidtbilisi/FileTagger/releases"

[project.scripts]
ftag = "filetagger.cli:main"
filetagger = "filetagger.cli:main"
ftag-mcp = "filetagger.mcp_server.server:main"

[tool.setuptools]
packages = ["filetagger", "filetagger.app", "filetagger.app.add", "filetagger.app.alias",
           "filetagger.app.autotag", "filetagger.app.bulk",
           "filetagger.app.config", "filetagger.app.filter", "filetagger.app.list_all",
           "filetagger.app.move", "filetagger.app.paths", "filetagger.app.preset",
           "filetagger.app.remove", "filetagger.app.saved_search", "filetagger.app.search",
           "filetagger.app.stats", "filetagger.app.storage", "filetagger.app.tags",
           "filetagger.app.visualization", "filetagger.app.graph", "filetagger.app.watch",
           "filetagger.app.exportdata", "filetagger.app.journal", "filetagger.app.doctor",
           "filetagger.mcp_server"]

[tool.setuptools.package-data]
"filetagger" = ["*.ini", "*.json"]
"filetagger.app" = ["thin_gui.html", "preview_page.html"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "1.8.0"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
